--- a/04-Pandas-Exercises/01-SF Salaries Exercise.ipynb
+++ b/04-Pandas-Exercises/01-SF Salaries Exercise.ipynb
@@ -11,6 +11,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config IPCompleter.greedy = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('Salaries.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,15 +76,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -196,12 +223,14 @@
        "4  2011    NaN  San Francisco     NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,10 +241,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -224,25 +251,29 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 148654 entries, 0 to 148653\n",
       "Data columns (total 13 columns):\n",
-      "Id                  148654 non-null int64\n",
-      "EmployeeName        148654 non-null object\n",
-      "JobTitle            148654 non-null object\n",
-      "BasePay             148045 non-null float64\n",
-      "OvertimePay         148650 non-null float64\n",
-      "OtherPay            148650 non-null float64\n",
-      "Benefits            112491 non-null float64\n",
-      "TotalPay            148654 non-null float64\n",
-      "TotalPayBenefits    148654 non-null float64\n",
-      "Year                148654 non-null int64\n",
-      "Notes               0 non-null float64\n",
-      "Agency              148654 non-null object\n",
-      "Status              0 non-null float64\n",
+      " #   Column            Non-Null Count   Dtype  \n",
+      "---  ------            --------------   -----  \n",
+      " 0   Id                148654 non-null  int64  \n",
+      " 1   EmployeeName      148654 non-null  object \n",
+      " 2   JobTitle          148654 non-null  object \n",
+      " 3   BasePay           148045 non-null  float64\n",
+      " 4   OvertimePay       148650 non-null  float64\n",
+      " 5   OtherPay          148650 non-null  float64\n",
+      " 6   Benefits          112491 non-null  float64\n",
+      " 7   TotalPay          148654 non-null  float64\n",
+      " 8   TotalPayBenefits  148654 non-null  float64\n",
+      " 9   Year              148654 non-null  int64  \n",
+      " 10  Notes             0 non-null       float64\n",
+      " 11  Agency            148654 non-null  object \n",
+      " 12  Status            0 non-null       float64\n",
       "dtypes: float64(8), int64(2), object(3)\n",
       "memory usage: 14.7+ MB\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,9 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -269,7 +298,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['BasePay'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -280,10 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -291,12 +320,14 @@
        "245131.88"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['OvertimePay'].max()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,10 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -319,12 +348,14 @@
        "Name: JobTitle, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['EmployeeName'] == \"JOSEPH DRISCOLL\"]['JobTitle']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,10 +366,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -347,12 +376,14 @@
        "Name: TotalPayBenefits, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['EmployeeName'] == \"JOSEPH DRISCOLL\"]['TotalPayBenefits']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -364,14 +395,25 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -428,7 +470,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['TotalPayBenefits']==df['TotalPayBenefits'].max()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -440,14 +484,25 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -504,7 +559,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['TotalPayBenefits']==df['TotalPayBenefits'].min()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -516,9 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -536,7 +591,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.groupby('Year')['BasePay'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -547,10 +604,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -558,12 +613,14 @@
        "2159"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['JobTitle'].nunique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -574,28 +631,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Transit Operator                7036\n",
-       "Special Nurse                   4389\n",
-       "Registered Nurse                3736\n",
-       "Public Svc Aide-Public Works    2518\n",
-       "Police Officer 3                2421\n",
-       "Name: JobTitle, dtype: int64"
+       "pandas.core.series.Series"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['JobTitle'].value_counts().nlargest(5,keep='first')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -606,10 +658,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -617,12 +667,14 @@
        "202"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sum(df[df['Year'] == 2013]['JobTitle'].value_counts() == 1)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -633,32 +685,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def chief_string(title):\n",
+    "    if 'chief' in title.lower():\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "477"
+       "627"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sum(df['JobTitle'].apply(lambda x: chief_string(x)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -669,24 +725,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['title_len'] = df['JobTitle'].apply(len)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -716,12 +783,14 @@
        "TotalPayBenefits  -0.036878          1.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[['title_len','TotalPayBenefits']].corr()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -747,9 +816,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
