--- a/11-Linear-Regression/01-Linear Regression with Python.ipynb
+++ b/11-Linear-Regression/01-Linear Regression with Python.ipynb
@@ -43,7 +43,6 @@
    "cell_type": "code",
    "execution_count": 255,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -82,7 +81,6 @@
    "cell_type": "code",
    "execution_count": 257,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -196,7 +194,6 @@
    "cell_type": "code",
    "execution_count": 258,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -229,7 +226,6 @@
    "cell_type": "code",
    "execution_count": 259,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -363,7 +359,6 @@
    "cell_type": "code",
    "execution_count": 260,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -399,10 +394,10 @@
    "cell_type": "code",
    "execution_count": 261,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -434,7 +429,6 @@
    "cell_type": "code",
    "execution_count": 262,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -469,7 +463,6 @@
    "cell_type": "code",
    "execution_count": 263,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -515,7 +508,6 @@
    "cell_type": "code",
    "execution_count": 264,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -539,12 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
@@ -553,12 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=101)"
@@ -574,12 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression"
@@ -588,12 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lm = LinearRegression()"
@@ -603,7 +575,6 @@
    "cell_type": "code",
    "execution_count": 269,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -637,7 +608,6 @@
    "cell_type": "code",
    "execution_count": 270,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -660,7 +630,6 @@
    "cell_type": "code",
    "execution_count": 277,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -759,12 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "predictions = lm.predict(X_test)"
@@ -774,7 +738,6 @@
    "cell_type": "code",
    "execution_count": 282,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -816,7 +779,6 @@
    "cell_type": "code",
    "execution_count": 281,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -885,7 +847,6 @@
    "cell_type": "code",
    "execution_count": 276,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
