No major changes

--- a/15-Decision-Trees-and-Random-Forests/02-Decision Trees and Random Forest Project.ipynb
+++ b/15-Decision-Trees-and-Random-Forests/02-Decision Trees and Random Forest Project.ipynb
@@ -50,7 +50,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -535,10 +536,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ec150b1308>"
+       "<matplotlib.legend.Legend at 0x23c2d5f90d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -554,7 +555,6 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
     "sns.set_style('dark')\n",
     "fig,axes=plt.subplots(figsize=(10,8))\n",
     "sns.distplot(data[data['credit.policy']==1]['fico'],kde=False,label= 'Credit Policy =1')\n",
@@ -1441,7 +1441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
